[metadata]
name = fepl
version = file: fepl/VERSION.txt
url = https://github.com/tos-kamiya/fepl
author = Toshihiro Kamiya
author_email = kamiya@mbj.nifty.com
license = Public Domain
description = fepl: Markup tool for IPA FE (Fundamental Information Technology Engineer Examination) Pseudo Language
long_description = file: README.md

[options.package_data]
* = *.txt, *.md

[options.entry_points]
console_scripts =
    fepl = fepl:main

[options]
zip_safe = True
packages = find:
install_requires =
    docopt
    wcwidth
